fix header's box-shadow to not be shifted right 5px

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -3,7 +3,7 @@
     width:100%;
     height:60px;
     background-color: white;
-    box-shadow: 5px 0px 10px 0px;
+    box-shadow: 0px 0px 10px 0px;
     display:flex;
     justify-content: space-between;
     align-items:center;
